<resources>
    <string name="app_name">aberdeenceramicsapp</string>

    <!--NavBar Strings-->
    <string name="profile_nb">profile</string>
    <string name="clock_nb">clock in</string>
    <string name="safety_nb">safety</string>
    <string name="classes_nb">classes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Class_Title">Upcoming Classes</string>
    <string name="Class1Name">Handbuilding Tuesday\n</string>
    <string name="Class1Text">Two handbuilding lessons over the course of two weeks 6pm-8.30pm</string>
    <string name="Class2Text">*Insert Text*</string>
    <string name="Class2Title">*Insert Class Title*</string>
    <string name="Class3Title">*Insert Class Title*</string>
    <string name="Title">Title</string>
    <string name="Text">Text</string>
    <string name="Class3Text">*Insert Text*</string>
    <string name="ClockIn">Clock In</string>
    <string name="WeeklyTime">Time used in the past week:</string>
    <string name="WeekTimer">*Insert Time*</string>
    <string name="ClockOut">Clock Out</string>
    <string name="Timer">*Insert Time*</string>
    <string name="StudioTime">Been in studio for:</string>
    <string name="NewsTitle">Newsletter</string>
    <string name="notif">You only have 2 days until your plan ends, renew?</string>
    <string name="Account">My Account</string>
    <string name="Membership"><a href='https://www.aberdeenceramicsstudio.com/get-in-touch'>My membership</a></string>
    <string name="LogOut">Log Out</string>
    <string name="SafetyTitle">ABERDEEN CERAMICS STUDIO HEALTH AND SAFETY INDUCTION</string>
    <string name="HealthAndSafety">*insert Safety Text*</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Forgot">Forgot Password?</string>
    <string name="LogIn">Log In</string>
    <string name="SignupLink">Not a member yet? Sign up</string>
    <string name="Name">Name</string>
    <string name="Subject">Subject</string>
    <string name="Message">Message</string>
    <string name="Upload">Upload File</string>
    <string name="add">Add</string>
    <string name="Delete">Delete</string>
    <string name="Submit">Submit</string>
    <string name="NewsLetter">*Insert Newsletter*</string>
    <string name="book"><a href='https://www.aberdeenceramicsstudio.com/book-online'>Book class</a></string>
    <string name="FireEscapesTitle">Fire Escapes</string>
    <string name="FireEscapes">In the event of a fire it is important that everyone leaves by their nearest exit, these are located either side of the building, the entrance and the door marked fire escape. After exiting the building everyone must gather at the fire assembly point located at the east wall of Deemouth carpark.</string>
    <string name="FirstAidTitle">First Aid</string>
    <string name="FirstAid">If you find that you require first aid attention please make this known to studio staff. The first aid box is kept behind the welcome desk.</string>
    <string name="ElectricalHazardsTitle">Electrical Hazards</string>
    <string name="ElectricalHazards">All electrical equipment is PAT safety tested annually. Only trained people are permitted to use our large electrical equipment - e.g. kilns. Electric heaters are mounted on the wall, well above work spaces. Only trained staff members adjust our electric heaters. All kilns are fitted with a safety switch so that they cannot be opened while the electricity is on. If you bring in electrical tools (for example a hairdryer or a heat gun) these must be within their guarantee period In areas where water and electricity are used in the same workspace, we have fitted exterior water proof sockets to avoid any accidental spillages. Our consumer unit is fitted with RCDs should this happen.</string>
    <string name="HotWaterTitle">Hot Water</string>
    <string name="HotWater">When left running and used regularly our hot water taps can become very hot, this could be a scald risk and users should remain cautious.</string>
    <string name="WheelsTitle">Pottery Wheels</string>
    <string name="Wheels">Members must not use the wheels without first being inducted into the workings of the machine. All jewellery must be removed, or tape worn around rings. Long hair must be tied back. Avoid putting your hands below the wheel head when moving.</string>
    <string name="WasteTitle">Waste</string>
    <string name="Waste">We recycle all of our clay by hand, when discarding of clay in the clay bin time should be taken to ensure no foreign objects are in your clay.</string>
    <string name="SlipsTitle">Slips and Trips</string>
    <string name="Slips">The studio is a working environment and as such there may be spillages or trip hazards. If you identify a hazard please notify a member of staff and this can be delt with quickly and effectively.</string>
    <string name="CutsTitle">Cuts</string>
    <string name="Cuts">Members use a range of different tools ranging from scissors to knives to needles, we ask you are responsible for your tools and do not handle tools you are unfamiliar with.\nUsers may be at risk from splinters as we use wood for throwing batts, ware boards, tables and tools. We maintain these surfaces regularly by sanding and oiling where appropriate. If you notice areas of timber that might need extra attention, please inform a member of staff.</string>
    <string name="KilnsTitle">Kilns</string>
    <string name="Kilns">Only trained staff members will operate kilns, these are kept in a designated area of the workshop where studio members can only go when accompanied by staff. Gloves are provided for all processes that might involve coming into contact with a sharp surface (for example, cleaning kiln shelves of glaze). These are carried out by trained staff members.\n</string>
    <string name="ResponsibilitiesTitle">Communal Responsibilities</string>
    <string name="Responsibilties">Leave your work area clean and empty for the next person. All your work should be stored on shelves. Any work left on wheels or tables will probably be moved to a shelf by someone needing workspace.</string>
    <string name="ClayTitle">Clay</string>
    <string name="Clay">Inhalation of all clay materials especially silica can damage your lungs.\n• All clay bodies contain some crystalline silica which can scar your lung\ntissue and cause irreversible loss of breathing capacity.\n• It is the finest, least visible particles that can hang in the air for hours\nthat are the most dangerous because they are the most easily respirable and\nbecause we are less likely to wear a mask when the air seems clear.\nAvoid excessive dust exposure.\n• Clean work area before clay scraps have a chance to dry out. Never\nsweep the studio.\n• We clean the studio often with a wet mop to pick up any particles that\nhave settled on the floor.\n• We suggest wearing plastic or vinyl-type aprons rather than porous\ncloth-type aprons to avoid transporting silica particles\n• No sanding of clay or ceramic. Fettling should be done with a damp\nsponge before firing.\nFor members using their own materials sourced elsewhere you should make\nsure you know what ingredients are in the clays you use.\n• Avoid use of hazardous compounds to colour your clay bodies.\n• Avoid use of Barium Carbonate in an earthenware clay body.\nWet clay is a good medium for mould growth and bacterial incubation.\n• People with specific types of mould allergies may be affected.\nDo not eat or drink in your workspace. Do not interchange tools and eating\nutensils. Scrub hands thoroughly after working.\nPrevent or alleviate back strain and wrist injuries with good work habits.\n• Keep your back straight when lifting heavy materials such as clay.\n• Try to avoid stressful, repetitive motions by varying your daily routine.\n Glazing\nWe will only use glaze in it’s liquid form meaning that all particles are kept to\nthat liquid. Glaze become hazardous when it is in powdered form i.e. if spilled\nand dries. Many glaze materials are hazardous. Those of special concern are\nlisted here:\n• Silica is present in almost all glazes and can scar lung tissue if inhaled.\n• Barium Carbonate, Sodium Borates, and Lead compounds can be\npresent as colorless fluxes in glazes.\n• Antimony compounds, Cadmium compounds, Chrome compounds,\nLead compounds, Cobalt Chloride, Cobalt Sulphate, Copper Chloride, Copper\nCarbonate, Copper Sulphate, Iron Chromate, Iron Sulphate, Manganese\nDioxide, Nickel compounds, Uranium compounds, and Vanadium\ncompounds can be present as glazes, slips and stains.\n• Lustre glazes contain toxic mediums as well as toxic metallic compounds.\n• Avoid use of these materials whenever possible. If you do use them,\ntake precautions to prevent ingestion as well as inhalation (which can lead to\ningested particles) and skin contact. Even though some of these materials\ncannot be directly absorbed through the skin, invisible particles can become\nlodged in the crevices of your skin.\nDo not eat or drink in glazing area. Do not interchange eating and glazing\nutensils. Scrub your hands thoroughly after glazing.\nUse a Ceramic dust filter mask that fits well when mixing or spraying.\n• Use a mask for vapours and gases when working with lustre glazes.\n• Spray glazes only in a properly constructed, vented and filtered spray\nbooth.\n• Buy a good dust filter mask and wear it when mixing dry materials and\nspraying glazes. Health and Safety Executive recommend a FFP3 mask which\nprotects against ceramic and cement particles.\nDo not pollute the environment when discarding unused toxic glaze\nmaterials.\n• Studio staff will properly discard of your waste glaze.</string>
    <string name="KilnRoomTitle">Kiln Room</string>
    <string name="KilnRoom">DOORS TO THE KILN ROOM MUST REMAIN CLOSED AT ALL TIMES. KILNS ARE ONLY OPERATED BY STAFF</string>

    <!--Classes names-->
    <string name="throwingTue">Throwing - Tuesdays</string>
    <string name="throwingThur">Throwing - Thursdays</string>
    <string name="mugMaking">Mug Making Workshop</string>
    <string name="FourPottery">4 Week Pottery Wheel Course</string>
    <string name="kidsCreatures">Kid\'s Clay Creature Class</string>
    <string name="teaLight">Hand build Your Own Tea Light Holder</string>


    <!--ClassesDesc-->
    <string name="HandbuildingDesc">Two handbuilding lessons over the course of two weeks 6pm-8.30pm</string>
    <string name="throwingDesc">Two throwing sessions over the course of two weeks 6pm-8.30pm</string>
    <string name="mugDesc">Handbuilding a set of mugs with Aimee Morris 6pm-8.30pm</string>
    <string name="fourWeekDesc">Four-Week Pottery Wheel Course: Mastering Pottery Refinement</string>
    <string name="kidsDesc">Come along to Aberdeen Ceramics Studio October holiday clay creature making sessions!</string>
    <string name="teaDesc">No description given</string>
    <string name="NewsLetterTitle">Newsletter\n</string>
</resources>