<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".clockIn_fragment" >

    <ImageView
        android:id="@+id/Time_Background"
        android:layout_width="315dp"
        android:layout_height="191dp"
        android:scaleType="fitXY"
        android:src="@drawable/backgroundblue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.307" />

    <Button
        android:id="@+id/ClockBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="318dp"
        android:layout_height="191dp"
        android:background="#D9876B"
        android:backgroundTintMode="add"
        android:fontFamily="@font/brandongrot"
        android:text="@string/ClockIn"
        android:textSize="64sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.788" />

    <TextView
        android:id="@+id/TimeUsedTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/normalbrandongrot"
        android:text="@string/WeeklyTime"
        android:textColor="#6E311C"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/ClockBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.231"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.431" />

    <TextView
        android:id="@+id/Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/normalbrandongrot"
        android:text="@string/WeekTimer"
        android:textColor="#6E311C"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/ClockBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.631" />

</androidx.constraintlayout.widget.ConstraintLayout>